<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222831"
    tools:context=".activities.LoginPage">

  <View
      android:id="@+id/topView"
      android:layout_width="0dp"
      android:layout_height="150dp"
      android:background="#d4f1f4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <View
      android:id="@+id/view5"
      android:layout_width="0dp"
      android:layout_height="100dp"
      android:background="@drawable/wave"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/topView" />

  <ImageView
      android:id="@+id/imageView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_person"
      android:contentDescription="@string/top_icon" />

  <TextView
      android:id="@+id/topText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="42dp"
      android:layout_marginTop="48dp"
      android:text="SNU CMS"
      android:textColor="@android:color/black"
      android:textSize="30sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toStartOf="@+id/imageView5"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/topView"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextNetId"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="32dp"
      android:background="@drawable/cardlayout"
      android:drawableStart="@drawable/ic_email"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="Net ID"
      android:inputType="textEmailAddress"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view5" />

  <EditText
      android:id="@+id/editTextPassword"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      android:background="@drawable/cardlayout"
      android:drawableStart="@drawable/ic_lock"
      android:drawablePadding="16dp"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:padding="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextNetId" />


  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnLogin"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="60dp"
      android:layout_marginEnd="32dp"
      android:text="@string/login"
      android:textColor="@android:color/black"
      android:background="@drawable/mybutton2"
      android:textSize="18sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />





</androidx.constraintlayout.widget.ConstraintLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:padding="10dp"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    android:background="@drawable/mello"-->
<!--    tools:context=".activities.LoginPage">-->

<!--  <TextView-->
<!--      android:id="@+id/SNUCMS"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:text="SNU CMS"-->
<!--      android:gravity="center"-->
<!--      android:textColor="@color/white"-->
<!--      android:textSize="35sp"-->
<!--      android:textStyle="bold"-->
<!--      app:layout_constraintTop_toTopOf="parent"-->
<!--      app:layout_constraintBottom_toBottomOf="parent"-->
<!--      app:layout_constraintVertical_bias="0.075"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintEnd_toEndOf="parent"/>-->

<!--  <ImageView-->
<!--      android:id="@+id/imageView"-->
<!--      android:layout_width="280dp"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:src="@drawable/snu"-->
<!--      android:layout_marginTop="70dp"-->
<!--      app:layout_constraintTop_toBottomOf="@+id/SNUCMS"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      />-->

<!--  <EditText-->
<!--      android:id="@+id/editTextNetId"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:background="#30ffffff"-->
<!--      android:hint="SNU Net id"-->
<!--      android:inputType="textEmailAddress"-->
<!--      android:padding="20dp"-->
<!--      android:textColor="@color/white"-->
<!--      android:textColorHint="@color/white"-->
<!--      android:layout_marginTop="50dp"-->
<!--      app:layout_constraintTop_toBottomOf="@id/imageView"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintEnd_toEndOf="parent"/>-->

<!--  <EditText-->
<!--      android:id="@+id/editTextPassword"-->
<!--      android:layout_width="match_parent"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:hint="Password"-->
<!--      android:inputType="textPassword"-->
<!--      android:padding="20dp"-->
<!--      android:textColor="@color/white"-->
<!--      android:background="#30ffffff"-->
<!--      android:textColorHint="@color/white"-->
<!--      android:layout_marginTop="20dp"-->
<!--      app:layout_constraintTop_toBottomOf="@id/editTextNetId"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      />-->

<!--  <com.google.android.material.button.MaterialButton-->
<!--      android:id="@+id/btnLogin"-->
<!--      android:layout_width="wrap_content"-->
<!--      android:layout_height="wrap_content"-->
<!--      android:backgroundTint="@color/purple_200"-->
<!--      android:text="Login"-->
<!--      android:layout_marginTop="30dp"-->
<!--      app:layout_constraintTop_toBottomOf="@id/editTextPassword"-->
<!--      app:layout_constraintStart_toStartOf="parent"-->
<!--      app:layout_constraintEnd_toEndOf="parent"-->
<!--      />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->

